bugfix: side scrolling tables now working, with default touch animation on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,14 +2,12 @@ html,
 body {
   padding: 0;
   margin: 0;
-  height: 100%;
   overflow-x: hidden;
 }
 
 body {
   overflow-y: scroll;
   overflow-x: hidden;
-  height: 100%;
 }
 
 a {
